--- a/main.css
+++ b/main.css
@@ -1,8 +1,54 @@
 body {
   display: inline-block;
-  width: 300px;
+  width: 350px;
+  background-color: #5f6d5b;
+  font-family: "Arial";
 }
 
-#productImage {
+#titleDiv {
+  color: white;
+  text-align: center;
+  padding: 15px;
+}
+
+h3 {
+  font-style: italic;
+  color: #e8e8e8;
+}
+
+.brand {
+  font-size: 90%;
+  font-style: italic;
+  color: DarkGray;
+}
+
+.envirorating {
+  font-style: italic;
+  color: DarkGray;
+}
+
+.productDiv {
+  background-color: white;
+  margin: 10px;
+  padding: 20px;
+  box-shadow: 3px 3px 5px 6px #495146;
+}
+
+.image {
   width: 100%;
+}
+
+.rating {
+}
+
+.ratingIcon {
+  display: inline-block;
+  width: 40px;
+  margin-right: 20px;
+}
+
+.ratingGrade {
+  display: inline-block;
+  color: #448727;
+  font-size: 40px;
 }
